# NovaEngine

./: .gitignore  .gitmodules  AutoCopy.cmake  CMakeLists.txt  CMakePresets.json  Clean.bat  Clean.sh  FindVulkan.cmake
Editor/: CMakeLists.txt  NovaEditor.cmake
Editor/Modules/TextureEditor/: CMakeLists.txt
Editor/Source/: EditorApplication.cpp  EditorApplication.h  Main.cpp  Project.cpp  Project.h
Editor/Source/Runtime/: NovaEditor.cpp  NovaEditor.h
Engine/: CMakeLists.txt  ModuleExport.in.h  NovaEngine.cmake  NovaEngine.natvis
Engine/Assets/Shaders/: BlinnPhong.glsl  BlinnPhong.slang  Common.slang  Debug.slang  Font.slang  Fullscreen.slang  GBuffer.slang  GeometryPass.slang  HelloTriangle.slang  LightingPass.slang  PBRShading.slang  Pristine.slang  Renderer2D.slang  Scene.slang  Sprite.glsl  Sprite.slang  SpriteBatch.slang  VertexData3D.slang
Engine/Audio/: CMakeLists.txt  NovaEngine-Audio.cmake
Engine/Audio/Private/: Audio.cpp
Engine/Audio/Public/: Audio.h
Engine/Audio/Source/: Audio.cpp  AudioSystem.cpp  AudioSystem.h  Sound.cpp  Sound.h  SoundFormat.h  SoundOptions.h  SoundType.h
Engine/Core/: CMakeLists.txt  Defines.h  NovaEngine-Core.cmake
Engine/Core/Containers/: Array.h  ArrayView.h  Buffer.h  BumpAllocator.h  Map.h  ScopedPointer.h  String.h  StringConversion.h  StringFormat.h  StringView.h  TreeNode.h
Engine/Core/Math/: Functions.cpp  Matrix3.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
Engine/Core/Runtime/: Application.cpp  Application.h  ApplicationConfiguration.h  Assertion.h  AudioSettings.h  DialogFilters.cpp  DialogFilters.h  EntryPoint.cpp  EntryPoint.h  Filesystem.h  Flags.h  Image.cpp  Image.h  Iterator.h  Log.cpp  Log.h  LogCategory.h  LogVerbosity.h  Logger.h  Memory.h  Types.h  Window.cpp  Window.h
Engine/Core/Serialization/: ArrayStream.h  FileStream.cpp  MemoryStream.cpp  OpenMode.h  Stream.h
Engine/Core/Source/: Core.cpp  Core.h
Engine/Dependencies/: Dependencies.cmake
Engine/Dependencies/FMODCore/: CMakeLists.txt
Engine/Dependencies/FMODStudio/: CMakeLists.txt
Engine/Dependencies/glad/: CMakeLists.txt
Engine/Dependencies/stb/: CMakeLists.txt
Engine/Dependencies/tinygltf/: CMakeLists.txt
Engine/Input/: CMakeLists.txt  GamepadButton.h  GamepadThumbstick.h  Input.cpp  Input.h  InputState.h  InputSystem.cpp  InputSystem.h  KeyCode.h
Engine/Physics/: BoxShape2D.h  BoxShape3D.h  CMakeLists.txt  CircleShape2D.h  JoltContact.h  MathConversions.h  NovaEngine-Physics.cmake  Physics3D.h  PhysicsBody2D.cpp  PhysicsBody2D.h  PhysicsBody3D.cpp  PhysicsBody3D.h  PhysicsBodyDefinition.h  PhysicsConstraints.h  PhysicsContact2D.h  PhysicsContact3D.h  PhysicsContactInfo.h  PhysicsContactInfo2D.h  PhysicsContactInfo3D.h  PhysicsMaterial.h  PhysicsShape.cpp  PhysicsShape.h  PhysicsShape2D.h  PhysicsShape3D.h  PhysicsWorld.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  PhysicsWorld2DContactListener.cpp  PhysicsWorld2DContactListener.h  PhysicsWorld3D.h  PhysicsWorld3DContactListener.cpp  PhysicsWorld3DContactListener.h  Raycast2DCallback.cpp  Raycast2DCallback.h  SphereShape3D.h
Engine/Physics/Public/: Formula.h
Engine/Physics/Source/: Defines.h  Formula.cpp  Formula.h
Engine/Source/: CMakeLists.txt
Engine/Source/AssetImporters/: ASTCImporter.cpp  ASTCImporter.h  DDSImporter.cpp  DDSImporter.h  TextureImporter.cpp  TextureImporter.h
Engine/Source/Assets/: SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheet.h
Engine/Source/Audio/: AudioClip.cpp  AudioClip.h  AudioDevice.cpp  AudioDevice.h  AudioFormat.h  AudioLoader.cpp  AudioLoader.h  AudioNode.cpp  AudioNode.h  AudioSystem.cpp  AudioSystem.h  AudioWriter.cpp  AudioWriter.h  FFTAudioNode.cpp  FFTAudioNode.h  Sound.cpp  Sound.h  SoundFormat.h  SoundOptions.h  SoundType.h
Engine/Source/CommandLine/: ArgumentParser.cpp  ArgumentParser.h  CmdLineArgs.cpp  CmdLineArgs.h  CommandLineOption.h
Engine/Source/Components/: Camera.cpp  Camera.h  EditorCameraController.cpp  EditorCameraController.h  FreeFlyCameraComponent.cpp  FreeFlyCameraComponent.h  Transform.cpp  Transform.h
Engine/Source/Containers/: Array.h  ArrayView.h  Buffer.h  BufferView.h  BumpAllocator.h  Fifo.h  Function.h  Lazy.h  Map.h  MulticastDelegate.h  Pair.h  Queue.h  ScopedPointer.h  StaticArray.h  Std140Buffer.cpp  Std140Buffer.h  String.h  StringConversion.h  StringFormat.cpp  StringFormat.h  StringView.h
Engine/Source/Editor/: DetailsPanel.cpp  DetailsPanel.h  Editor.h  EditorGUI.cpp  EditorGUI.h  EditorWindow.cpp  EditorWindow.h  Font.h  HierarchyWindow.cpp  HierarchyWindow.h  ImGuiRenderer.cpp  ImGuiRenderer.h  InspectorWindow.cpp  InspectorWindow.h  Menu.h  PhysicsSettingsPanel.cpp  PhysicsSettingsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  Selection.cpp  Selection.h  StyleVar.h  ViewportPanel.cpp  ViewportPanel.h  ViewportWindow.cpp  ViewportWindow.h
Engine/Source/Game/: Asset.cpp  Asset.h  AssetDatabase.h  Component.cpp  Component.h  Entity.cpp  Entity.h  EntityHandle.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Source/Graphics/: FrameBuffer.cpp  FrameBuffer.h  GraphicsSettings.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Engine/Source/IO/: ArrayStream.cpp  ArrayStream.h  AssetPack.cpp  AssetPack.h  AssetPack.hxx  FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h
Engine/Source/Input/: CursorMode.h  GamepadButton.h  Input.cpp  (+10 more)
Example/HelloAudio/: CMakeLists.txt
Example/HelloCompute/: CMakeLists.txt
Example/HelloRenderer2D/: CMakeLists.txt
Example/HelloTexture/: CMakeLists.txt
Example/HelloTriangle/: CMakeLists.txt  Main.cpp
Examples/HelloModel/: CMakeLists.txt
Examples/HelloTriangle/: CMakeLists.txt
Programs/AssetPacker/: CMakeLists.txt
Samples/HelloCube/: CMakeLists.txt
Samples/HelloFont/: CMakeLists.txt
Samples/HelloTexture/: CMakeLists.txt
Samples/HelloTriangle/: CMakeLists.txt
(+804 files in other folders)
