file(GLOB_RECURSE SOURCES *.cpp *.h)

add_executable(NovaEditor ${SOURCES})
set_target_properties(NovaEditor PROPERTIES CXX_STANDARD 20)
target_link_libraries(NovaEditor PRIVATE NovaEngine)
target_compile_definitions(NovaEditor PRIVATE NOVA_EDITOR)
target_include_directories(NovaEditor PRIVATE Source)
copy_imported_shared_lib(fmod-core NovaEditor)
copy_imported_shared_lib(fmod-studio NovaEditor)
copy_imported_shared_lib(msdfgen-core NovaEditor)
copy_imported_shared_lib(msdfgen-ext NovaEditor)