set(FMOD_CORE_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Library/FMOD-Core)
set(FMOD_STUDIO_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Library/FMOD-Studio)
set(FMOD_CORE_BIN_DIR ${FMOD_CORE_LIB_DIR}/Binaries)
set(FMOD_STUDIO_BIN_DIR ${FMOD_STUDIO_LIB_DIR}/Binaries)
file(GLOB_RECURSE SOURCES $*.cpp *.h)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(NovaEngine-Audio SHARED ${SOURCES})

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
	if(CMAKE_BUILD_TYPE STREQUAL "RelWithDebugInfo")
		target_link_libraries(NovaEngine-Audio PRIVATE ${FMOD_CORE_BIN_DIR}/Windows/fmodL.dll)
		target_link_libraries(NovaEngine-Audio PRIVATE ${FMOD_STUDIO_BIN_DIR}/Windows/fmodstudioL.dll)
	elseif (CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
		target_link_libraries(NovaEngine-Audio PRIVATE ${FMOD_CORE_BIN_DIR}/Windows/fmod.dll)
		target_link_libraries(NovaEngine-Audio PRIVATE ${FMOD_STUDIO_BIN_DIR}/Windows/fmodstudio.dll)
	endif ()
elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
	if(CMAKE_BUILD_TYPE STREQUAL "RelWithDebugInfo")
		target_link_libraries(NovaEngine-Audio PRIVATE ${FMOD_CORE_BIN_DIR}/Linux/libfmodL.so)
		target_link_libraries(NovaEngine-Audio PRIVATE ${FMOD_STUDIO_BIN_DIR}/Linux/libfmodstudioL.so)
	elseif (CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
		target_link_libraries(NovaEngine-Audio PRIVATE ${FMOD_CORE_BIN_DIR}/Linux/libfmod.so)
		target_link_libraries(NovaEngine-Audio PRIVATE ${FMOD_STUDIO_BIN_DIR}/Linux/libfmodstudio.so)
	endif ()
endif ()

target_include_directories(NovaEngine-Audio PRIVATE ${FMOD_CORE_LIB_DIR}/Include)
target_include_directories(NovaEngine-Audio PUBLIC ${MODULE_DIR}/Source)
target_link_libraries(NovaEngine-Audio PRIVATE NovaEngine-Core)
