file(GLOB_RECURSE HELLOMODEL_SOURCES Source/*.cpp Source/*.h)

add_executable(HelloModel)
set_target_properties(HelloModel PROPERTIES CXX_STANDARD 23)
target_sources(HelloModel PRIVATE ${HELLOMODEL_SOURCES})
target_link_libraries(HelloModel PUBLIC NovaEngine)
target_compile_definitions(HelloModel PRIVATE NOVA_APPLICATION_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(HelloModel PRIVATE Source)
if(CMAKE_BUILD_TYPE MATCHES Release OR CMAKE_BUILD_TYPE MATCHES MinSizeRel)
    set_target_properties(HelloModel PROPERTIES WIN32_EXECUTABLE TRUE)
endif ()